feat: enhance CORS and JWT configurations, implement rate limiting with properties